feat: 8 hours update tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,7 @@ bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - \; paste-b
 set -g @resurrect-capture-pane-contents 'on' # 开启恢复面板内容功能
 set -g @resurrect-save-shell-history 'on' # 恢复 shell 历史
 set -g @continuum-restore 'on' # 启用自动恢复
+set -g @continuum-save-interval '480' # 8小时自动备份一次，默认 15 分钟
 
 # 插件
 set -g @plugin 'tmux-plugins/tpm'
