feat: remove tmux-continuum

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ unbind C-b
 set -g prefix C-a
 
 # 基本设置
+set -g mouse on
 set -g default-terminal "screen-256color"
 set -g display-time 3000
 set -g escape-time 0
@@ -49,17 +50,10 @@ bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy" \; display-m
 # Mac系统粘贴板内容复制到会话
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - \; paste-buffer -d"
 
-# 恢复会话
-set -g @resurrect-capture-pane-contents 'on' # 开启恢复面板内容功能
-set -g @resurrect-save-shell-history 'on' # 恢复 shell 历史
-set -g @continuum-restore 'on' # 启用自动恢复
-set -g @continuum-save-interval '480' # 8小时自动备份一次，默认 15 分钟
-
 # 插件
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # 方便的保存和恢复 tmux session.
-set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
