--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # 使用 reattach-to-user-namespace 复制到系统剪切板
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # buffer缓存复制到Mac系统粘贴板
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy" \; display-message "Copied tmux buffer to system clipboard"
 # Mac系统粘贴板内容复制到会话
